@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <settings>
-   
+	<setting label="30001" type="bool" id="traktlookup" default="true"/>
 </settings>
