@@ -1,24 +1,87 @@
-﻿<?xml version="1.0" encoding="utf-8"?><scraper framework="1" date="2012-06-20" name="TV Rage API" content="tvshows" thumb="tvrage.jpg" language="en">
+﻿<?xml version="1.0" encoding="utf-8"?><scraper framework="1" date="2012-07-07" name="TV Rage API" content="tvshows" thumb="tvrage.jpg" language="en">
 	<NfoUrl dest="3">
 		<RegExp input="$$1" output="&lt;url&gt;http://services.tvrage.com/full_show_info.php?sid=\1&lt;/url&gt;" dest="3">
 			<expression>http://(?:www\.)?tvrage.com/shows/id-([0-9]+)</expression>
 		</RegExp>
 	</NfoUrl>
 	<CreateSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;http://services.tvrage.com/feeds/search.php?show=\1&lt;/url&gt;" dest="3">
+		<RegExp conditional="traktlookup" input="$$5" output="&lt;url&gt;http://api.trakt.tv/search/shows.json/be64291aafbbbe62fdc4f3aa0edb4073/\1&lt;/url&gt;" dest="3">
+			<RegExp input="$$1" output="\1+" dest="5">
+				<expression repeat="yes">([^%]+)</expression>
+			</RegExp>
+			<expression trim="1">(.*)</expression>
+		</RegExp>
+		<RegExp conditional="!traktlookup" input="$$1" output="&lt;url&gt;http://services.tvrage.com/feeds/search.php?show=\1&lt;/url&gt;" dest="3">
 			<expression />
 		</RegExp>
 	</CreateSearchUrl>
 	<GetSearchResults dest="3">
 		<RegExp input="$$4" output="&lt;results&gt;\1&lt;/results&gt;" dest="3">
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;url cache=&quot;\1.xml&quot;&gt;http://services.tvrage.com/feeds/full_show_info.php?sid=\1&lt;/url&gt;&lt;/entity&gt;" dest="4">
+			<RegExp conditional="traktlookup" input="$$1" output="&lt;entity&gt;&lt;title&gt;\1&lt;/title&gt;&lt;id&gt;\3&lt;/id&gt;&lt;url cache=&quot;\2.xml&quot;&gt;http://api.trakt.tv/show/summary.json/be64291aafbbbe62fdc4f3aa0edb4073/\2&lt;/url&gt;&lt;/entity&gt;" dest="4">
+				<expression repeat="yes">{"title":"([^"]+)".*?"tvdb_id":"([^"]+)".*?"tvrage_id":"([^"]+)"</expression>
+			</RegExp>
+			<RegExp conditional="!traktlookup" input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;url cache=&quot;\1.xml&quot;&gt;http://services.tvrage.com/feeds/full_show_info.php?sid=\1&lt;/url&gt;&lt;/entity&gt;" dest="4">
 				<expression repeat="yes">&lt;showid&gt;(\d+).*?&lt;name&gt;([^&lt;]*)&lt;/name&gt;</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
 	</GetSearchResults>
 	<GetDetails dest="7">
-		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="7">
+		<RegExp conditional="traktlookup" input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="7">
+			<RegExp input="$$1" output="&lt;title&gt;\1&lt;/title&gt;" dest="5">
+				<expression>"title":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="5+">
+				<expression>"overview":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;mpaa&gt;\1&lt;/mpaa&gt;" dest="5+">
+				<expression>"certification":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="5+">
+				<expression>"percentage":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="5+">
+				<expression>"network":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;country&gt;\1&lt;/country&gt;" dest="5+">
+				<expression>"country":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;actor&gt;&lt;name&gt;\1&lt;/name&gt;&lt;role&gt;\2&lt;/role&gt;&lt;/actor&gt;" dest="5+">
+				<expression repeat="yes">{"name":"(.*?)","character":"(.*?)"}</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;thumb&gt;\1&lt;/thumb&gt;" dest="5+">
+				<expression>"banner":"([^"]+)"</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;thumb&gt;\1&lt;/thumb&gt;" dest="5+">
+				<expression>"poster":"([^"]+)"</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;thumb&gt;\1&lt;/thumb&gt;&lt;thumb type=&quot;season&quot; season=&quot;-1&quot;&gt;\1&lt;/thumb&gt;" dest="5+">
+				<expression>"poster":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;fanart&gt;&lt;thumb&gt;\1&lt;/thumb&gt;&lt;/fanart&gt;" dest="5+">
+				<expression>"fanart":"([^"]+)",</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;status&gt;\1&lt;/status&gt;" dest="5+">
+				<expression trim="1">"status":"([^"]+)"</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;premiered&gt;\1&lt;/premiered&gt;" dest="5+">
+				<expression trim="1">"first_aired":([^,]+),</expression>
+			</RegExp>
+			<RegExp input="$$1" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="5+">
+				<expression trim="1">"runtime":([^,]+),</expression>
+			</RegExp>
+			<RegExp input="$$6" output="\1" dest="5+">
+				<RegExp input="$$1" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="6">
+					<expression trim="1" noclean="1">"genres":.*?"([^"]+)"</expression>
+				</RegExp>
+				<expression trim="1" noclean="1" />
+			</RegExp>
+			<RegExp input="$$1" output="&lt;episodeguide&gt;&lt;id&gt;$$2&lt;/id&gt;&lt;url cache=&quot;$$2-eps.xml&quot;&gt;http://www.tvrage.com/shows/id-$$2/episode_list/all&lt;/url&gt;&lt;/episodeguide&gt;" dest="5+">
+				<expression trim="1" />
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+		<RegExp conditional="!traktlookup" input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="7">
 			<RegExp input="$$1" output="&lt;title&gt;\1&lt;/title&gt;" dest="5">
 				<expression>&lt;name&gt;([^&lt;]*)&lt;/name&gt;</expression>
 			</RegExp>
