@@ -1,3 +1,7 @@
+[B]1.0.4[/B]
+- Added ability to lookup shows at trakt.tv.
+- Default is now to lookup at trakt.tv. Enabling will provide better show info but sometimes trakt's tvrage_id is wrong.
+
 [B]1.0.3[/B]
 - Remove unused settings
 
